--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
     <script src="/static/typing-indicator.js"></script>
     <script src="/static/crypto.js"></script>
     <script src="/static/webrtc.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1946230957475430"
+     crossorigin="anonymous"></script>
     <style>
         /* Theme Variables */
         :root {
