--- a/templates/direct_messages.html
+++ b/templates/direct_messages.html
@@ -15,6 +15,8 @@
     <script src="/static/emoji-picker.js"></script>
     <script src="/static/typing-indicator.js"></script>
     <script src="/static/crypto.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1946230957475430"
+     crossorigin="anonymous"></script>
     <style>
         /* Theme Variables */
         [data-theme="light"] body {
